force-app/main/default/objects/Batch_Execution_Log__c/Batch_Execution_Log__c.object-meta.xml
<CustomObject>
    <description>Persistent logging for batch execution to track manual vs scheduled processing differences</description>
    <label>Batch Execution Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Execution Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>