force-app/main/default/objects/Batch_Execution_Log__c/fields/After_ARR__c.field-meta.xml
<CustomField>
    <fullName>After_ARR__c</fullName>
    <description>Contract ARR value after batch processing</description>
    <inlineHelpText>ARR value after batch processing completed</inlineHelpText>
    <label>After ARR</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>