force-app/main/default/objects/Batch_Execution_Log__c/fields/Batch_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_ID__c</fullName>
    <description>AsyncApexJob ID for correlation with Salesforce batch monitoring</description>
    <inlineHelpText>Links this log entry to the specific batch job execution</inlineHelpText>
    <label>Batch Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>