force-app/main/default/objects/Batch_Execution_Log__c/fields/Before_ARR__c.field-meta.xml
<CustomField>
    <fullName>Before_ARR__c</fullName>
    <description>Contract ARR value before batch processing</description>
    <inlineHelpText>ARR value when contract was first queried by the batch</inlineHelpText>
    <label>Before ARR</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>