force-app/main/default/objects/Batch_Execution_Log__c/fields/Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID__c</fullName>
    <description>ID of the Contract being processed by the batch</description>
    <inlineHelpText>Contract record that this log entry tracks</inlineHelpText>
    <label>Contract ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>