force-app/main/default/objects/Batch_Execution_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Detailed error message if processing or update failed</description>
    <inlineHelpText>Contains exception details, DML errors, or other failure information</inlineHelpText>
    <label>Error Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>