force-app/main/default/objects/Batch_Execution_Log__c/fields/Execution_Context__c.field-meta.xml
<CustomField>
    <fullName>Execution_Context__c</fullName>
    <description>Whether this batch ran in manual or scheduled context</description>
    <inlineHelpText>MANUAL = run via Developer Console, SCHEDULED = run via automation</inlineHelpText>
    <label>Execution Context</label>
    <length>20</length>
    <type>Text</type>
</CustomField>