force-app/main/default/objects/Batch_Execution_Log__c/fields/Needs_Update__c.field-meta.xml
<CustomField>
    <fullName>Needs_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether processContract determined the contract needed updating</description>
    <inlineHelpText>True if needsUpdate was set to true in processContract method</inlineHelpText>
    <label>Needs Update</label>
    <type>Checkbox</type>
</CustomField>