force-app/main/default/objects/Batch_Execution_Log__c/fields/Processing_Stage__c.field-meta.xml
<CustomField>
    <fullName>Processing_Stage__c</fullName>
    <description>Stage of processing when this log was created</description>
    <inlineHelpText>Tracks progress: QUERIED → PROCESSED → UPDATED/FAILED</inlineHelpText>
    <label>Processing Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUERIED</fullName>
            </value>
            <value>
                <fullName>PROCESSED</fullName>
            </value>
            <value>
                <fullName>SKIPPED</fullName>
            </value>
            <value>
                <fullName>UPDATED</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>