force-app/main/default/objects/Batch_Execution_Log__c/fields/Update_Success__c.field-meta.xml
<CustomField>
    <fullName>Update_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the DML update operation succeeded for this contract</description>
    <inlineHelpText>True if Database.SaveResult.isSuccess() returned true</inlineHelpText>
    <label>Update Success</label>
    <type>Checkbox</type>
</CustomField>